[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minimal-provider"
version = "0.1.0"
description = "Minimal renderflow provider example"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "renderflow @ git+https://github.com/briday1/renderflow.git@main",
    "streamlit>=1.31.0",
    "plotly>=5.18.0",
    "kaleido>=0.2.1",
]

[project.entry-points."renderflow.providers"]
minimal-provider = "minimal_provider.renderflow:get_app_spec"

[tool.setuptools.packages.find]
include = ["minimal_provider*"]
